--- a/admin/slider.html
+++ b/admin/slider.html
@@ -3,18 +3,18 @@
     <section class="admin-content">
         <div class="admin-content-left">
             <ul>
-            <li><a href="#">Danh Mục</a>
+            <li><h2>Danh Mục</h2>
                 <ul>
                     <li><a href="categoryadd.php">Thêm Danh Mục</a></li>
                     <li><a href="cartegorylist.php">Danh Sách Danh Mục</a></li>
                 </ul>
             </li>
-            <li><a href="#">Loại Sản Phẩm</a>
+            <li><h2> Loại Sản Phẩm</h2>
                 <ul>
                     <li><a href="">Thêm Loại Sản Phẩm</a></li>
                     <li><a href="">Danh Sách loại sản phẩm</a></li>
                 </ul></li>
-            <li><a href="#">Sản phẩm</a>
+            <li><h2>Sản phẩm</h2>
                 <ul>
                     <li><a href="">Thêm sản phẩm</a></li>
                     <li><a href="">Danh Sách Sản phẩm</a></li>
