--- a/admin/slider.html
+++ b/admin/slider.html
@@ -11,7 +11,7 @@
             </li>
             <li><h2> Loại Sản Phẩm</h2>
                 <ul>
-                    <li><a href="">Thêm Loại Sản Phẩm</a></li>
+                    <li><a href="brandadd.php">Thêm Loại Sản Phẩm</a></li>
                     <li><a href="">Danh Sách loại sản phẩm</a></li>
                 </ul></li>
             <li><h2>Sản phẩm</h2>
