--- a/admin/header.html
+++ b/admin/header.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <center><h1 style="color: black;">TRANG QUẢN TRỊ</h1></center>
+    <a href="index.php"><center><h1 style="color: black;">TRANG QUẢN TRỊ</h1></center></a>
 </body>
 </html>
