--- a/admin/header.html
+++ b/admin/header.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <a href="index.php"><center><h1 style="color: black;">TRANG QUẢN TRỊ</h1></center></a>
+    <a href="/DuAn1/view/index.php">Về Lại Trang Giao Diện</a>
 </body>
 </html>
