--- a/admin/slider.html
+++ b/admin/slider.html
@@ -20,6 +20,17 @@
                     <li><a href="">Danh Sách Sản phẩm</a></li>
                 </ul>
             </li>
+            <li><h2>Giỏ Hàng</h2>
+                <ul>
+                    <li><a href="">Danh Sách Đặt Hàng</a></li>
+                    <li><a href="">Trạng thái hoàn thành</a></li>
+                </ul>
+            </li>
+            <li><h2>Tài Khoản</h2>
+                <ul>
+                    <li><a href="">Quản Lý Tài Khoản</a></li>
+                </ul>
+            </li>
         </ul>
         </div>
 
