--- a/admin/slider.html
+++ b/admin/slider.html
@@ -5,7 +5,7 @@
             <ul>
             <li><h2>Danh Mục</h2>
                 <ul>
-                    <li><a href="categoryadd.php">Thêm Danh Mục</a></li>
+                    <li><a href="cartegoryadd.php">Thêm Danh Mục</a></li>
                     <li><a href="cartegorylist.php">Danh Sách Danh Mục</a></li>
                 </ul>
             </li>
