--- a/admin/slider.html
+++ b/admin/slider.html
@@ -16,7 +16,7 @@
                 </ul></li>
             <li><h2>Sản phẩm</h2>
                 <ul>
-                    <li><a href="">Thêm sản phẩm</a></li>
+                    <li><a href="productadd.php">Thêm sản phẩm</a></li>
                     <li><a href="">Danh Sách Sản phẩm</a></li>
                 </ul>
             </li>
