--- a/admin/header.html
+++ b/admin/header.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <a href="index.php"><center><h1 style="color: black;">TRANG QUẢN TRỊ</h1></center></a>
+    <a href="index.php" style="text-decoration: none;">
+    <center><h1 style="color: black;">TRANG QUẢN TRỊ</h1></center>
+</a>
+
+    
 
     <a href="/DuAn1/view/index.php">Về Lại Trang Giao Diện</a>
 
