--- a/admin/slider.html
+++ b/admin/slider.html
@@ -5,19 +5,14 @@
             <ul>
             <li><h2>Danh Mục</h2>
                 <ul>
-                    <li><a href="cartegoryadd.php">Thêm Danh Mục</a></li>
-                    <li><a href="cartegorylist.php">Danh Sách Danh Mục</a></li>
+                    <li><a href="cartegoryadd.php">Thêm Loại Sản Phẩm</a></li>
+                    <li><a href="cartegorylist.php">Danh Sách Loại Sản Phẩm</a></li>
                 </ul>
             </li>
-            <li><h2> Loại Sản Phẩm</h2>
-                <ul>
-                    <li><a href="brandadd.php">Thêm Loại Sản Phẩm</a></li>
-                    <li><a href="">Danh Sách loại sản phẩm</a></li>
-                </ul></li>
-            <li><h2>Sản phẩm</h2>
+            <li><h2>Sản Phẩm</h2>
                 <ul>
                     <li><a href="productadd.php">Thêm sản phẩm</a></li>
-                    <li><a href="">Danh Sách Sản phẩm</a></li>
+                    <li><a href="productlist.php">Danh Sách Sản phẩm</a></li>
                 </ul>
             </li>
             <li><h2>Giỏ Hàng</h2>
